--- a/index.html
+++ b/index.html
@@ -1,60 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
     <title>Todo App</title>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">   
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="style.css" media="screen">
   </head>
   <body>    
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
+    <header class="header">
+      <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix" class="header__image">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    </header>
 
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
+    <main class="main-wrapper">  
+      <section class="new-task">
+        <h3 class="new-task__title">
+          <label class="new-task__label" for="new_task">Add Item</label>
+        </h3>
+        <div class="new-task-wrapper">
+          <input type="text" id="new_task" class="new-task__input">        
+          <button class="button button_add">Add</button>
         </div>
-      </p>
+      </section>
 
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove button image">
-          </button>
-        </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove button image">
-          </button>
-        </li>
-      </ul>
+      <section class="task-list">
+        <h3 class="task-list__title">Todo</h3>
+        <ul id="incomplete" class="task-list__tasks">
+          <li class="task">
+            <input type="checkbox" class="task_checkbox">
+            <label class="task__label">Pay Bills</label>
+            <input type="text" class="task__input">
+            <button class="button button_edit">Edit</button>
+            <button class="button button_delete">
+              <img src="./remove.svg" alt="Remove button image">
+            </button>
+          </li>
+          <li class="task task_edit-mode">
+            <input type="checkbox" class="task_checkbox">
+            <label class="task__label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task__input">
+            <button class="button button_edit">Save</button>
+            <button class="button button_delete">
+              <img src="./remove.svg" alt="Remove button image">
+            </button>
+          </li>
+        </ul>
+      </section>
 
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove button image">
-          </button>
-        </li>
-      </ul>
-    </div>
+      <section class="task-list">
+        <h3 class="task-list__title">Completed</h3>
+        <ul id="completed" class="task-list__tasks">
+          <li class="task">
+            <input type="checkbox" class="task_checkbox" checked>
+            <label class="task__label">See the Doctor</label>
+            <input type="text" class="task__input">
+            <button class="button button_edit">Edit</button>
+            <button class="button button_delete">
+              <img src="./remove.svg" alt="Remove button image">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <script src="app.js"></script>
   </body>
